--- a/react-cart/index.html
+++ b/react-cart/index.html
@@ -18,8 +18,8 @@
     </div>
   </div>
 
-  <script src="./script.js"></script>
-  <script type="module" src="./src/main.jsx"></script>
+  <script src="/script.js"></script>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
