--- a/react-cart/index.html
+++ b/react-cart/index.html
@@ -18,7 +18,7 @@
     </div>
   </div>
 
-  <script src="/script.js"></script>
+  <script src="/src/script.js"></script>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
